Just found interesting bug, when header dissapears I still can click on links, even though they are invisible

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -6,6 +6,33 @@
     font-style: normal;
 }
 
+.socialLink {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+  }
+  
+  .socialLink:hover {
+    color: #000;
+  }
+  
+  .socialLink::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  .socialLink:hover::before {
+    transform: scaleX(1);
+  }
+
 h1 {
     text-shadow: 1px 1px 2px black;
 }
@@ -253,4 +280,9 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.emailLink{
+    color: black;
+    text-decoration: none;
 }
